deployment/dbpostgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dbpostgresql
  name: dbpostgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dbpostgresql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/tern-default: "true"
        io.kompose.service: dbpostgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: polldb
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: postgres
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: postgres
          name: dbpostgresql
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
