deployment/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tern-demo
spec:
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: tern-demo
