deployment/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tern-demo
spec:
  selector:
    matchLabels:
      app: tern-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: tern-demo
    spec:
      containers:
        - name: tern-demo
          image: tern-demo:10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: tern-demo
spec:
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: tern-demo
